--- a/examples/starter-base-tailwind/src/styles/tailwind.css
+++ b/examples/starter-base-tailwind/src/styles/tailwind.css
@@ -60,6 +60,9 @@
   .text-upper-spaced {
     @apply text-xs font-semibold tracking-wider uppercase;
   }
+  .input-focus {
+    @apply focus:outline-none focus:ring-gray-200 dark:focus:ring-opacity-25;
+  }
   input[type="search"]:-webkit-autofill {
     box-shadow: theme("colors.searchBg") 0px 0px 0px 1000px inset;
     -webkit-text-fill-color: theme("colors.text");
@@ -125,5 +128,11 @@
   }
   .btn-secondary {
     @apply bg-secondary hover:bg-primary;
+  }
+  /* Forms */
+  .styled-input {
+    @apply input-focus;
+    @apply bg-transparent border-0 border-b-2 border-text dark:border-dark-text;
+    @apply focus:border-b-2;
   }
 }
