--- a/examples/ starter-base-gradient-tailwind/src/styles/tailwind.css
+++ b/examples/ starter-base-gradient-tailwind/src/styles/tailwind.css
@@ -27,7 +27,7 @@
   }
   /* Pagination */
   .prev-next-text {
-    @apply text-upper-spaced hover:text-primary;
+    @apply text-upper-spaced hover:!text-primary;
   }
   .prev-next-anim {
     @apply transition duration-700 transform scale-x-0 bg-text dark:bg-dark-text  w-7 h-[1px] group-hover:scale-x-100 group-hover:bg-primary;
