--- a/examples/starter-naked/src/styles/wordpress.css
+++ b/examples/starter-naked/src/styles/wordpress.css
@@ -5,7 +5,7 @@
 
 .content
   > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide):not(.content) {
-  @apply max-w-4xl w-[calc(100%-3rem)]  sm:w-[calc(100%-4rem)];
+  @apply max-w-4xl;
 }
 [class*="__inner-container"] > [style*="width: 100vw"],
 [class*="__inner-container"] > [style*="width:100vw"] {
