--- a/examples/starter-light/src/styles/tailwind.css
+++ b/examples/starter-light/src/styles/tailwind.css
@@ -10,7 +10,7 @@
     @apply text-sm font-bold tracking-widest uppercase hover:text-secondary dark:hover:text-primary;
   }
   .prev-next-anim {
-    @apply transition duration-700 transform scale-x-0 bg-text dark:bg-dark-text  w-7 h-[1px] group-hover:scale-x-100;
+    @apply transition duration-700 scale-x-0 bg-text dark:bg-dark-text  w-7 h-[1px] group-hover:scale-x-100;
   }
 
   /* Menu */
@@ -46,7 +46,7 @@
   }
   /* Buttons */
   .btn {
-    @apply px-4 py-2 text-xs !text-white uppercase transition duration-500 transform rounded-full shadow-md bg-gradient-to-r hover:-translate-y-1 hover:shadow-2xl;
+    @apply px-4 py-2 text-xs !text-white uppercase transition duration-500 rounded-full shadow-md bg-gradient-to-r hover:-translate-y-1 hover:shadow-2xl;
   }
   .btn-primary {
     @apply from-primary to-purple;
