--- a/examples/starter-base-tailwind/src/styles/tailwind.css
+++ b/examples/starter-base-tailwind/src/styles/tailwind.css
@@ -52,7 +52,7 @@
     @apply text-upper-spaced hover:!text-primary;
   }
   .prev-next-anim {
-    @apply transition duration-700 transform scale-x-0 bg-text dark:bg-dark-text  w-7 h-[1px] group-hover:scale-x-100 group-hover:bg-primary;
+    @apply transition duration-700 scale-x-0 bg-text dark:bg-dark-text  w-7 h-[1px] group-hover:scale-x-100 group-hover:bg-primary;
   }
   /* Widgets */
   .widget-title {
@@ -72,7 +72,7 @@
     @apply px-6 py-2 text-xs font-semibold tracking-wider text-white uppercase transition duration-500;
   }
   .btn-ghost {
-    @apply text-black transform border-2 border-black shadow-md dark:border-light dark:text-light hover:bg-black dark:hover:bg-light hover:-translate-y-1 hover:shadow-lg hover:!text-light dark:hover:!text-black;
+    @apply text-black border-2 border-black shadow-md dark:border-light dark:text-light hover:bg-black dark:hover:bg-light hover:-translate-y-1 hover:shadow-lg hover:!text-light dark:hover:!text-black;
   }
   .btn-primary {
     @apply bg-primary hover:bg-secondary;
