--- a/examples/starter-naked/src/styles/tailwind.css
+++ b/examples/starter-naked/src/styles/tailwind.css
@@ -77,3 +77,23 @@
     -webkit-text-fill-color: theme("colors.dark.text");
   }
 }
+
+.two-cols {
+  @apply grid-cols-2 gap-10 sm:grid;
+  .headline {
+    @apply mb-10 text-center text-7xl text-primary;
+  }
+  section {
+    @apply first:mb-5 sm:mb-0;
+  }
+  .content {
+    @apply flex flex-col justify-center;
+  }
+  img {
+    @apply rounded-xl;
+  }
+}
+
+.test {
+  @apply font-bold text-primary;
+}
