--- a/examples/starter-naked/src/styles/tailwind.css
+++ b/examples/starter-naked/src/styles/tailwind.css
@@ -3,6 +3,9 @@
 @import "tailwindcss/utilities";
 @import "base.css";
 @import "wordpress.css";
+@import "acfBlocks/cover-block.css";
+@import "acfBlocks/content-block.css";
+@import "acfBlocks/sections-block.css";
 
 @layer base {
   /* Pagination */
@@ -75,22 +78,6 @@
   .dark input[type="search"]:-webkit-autofill {
     box-shadow: theme("colors.dark.searchBg") 0px 0px 0px 1000px inset;
     -webkit-text-fill-color: theme("colors.dark.text");
-  }
-}
-
-.two-cols {
-  @apply grid-cols-2 gap-10 sm:grid;
-  .headline {
-    @apply mb-10 text-center text-7xl text-primary;
-  }
-  section {
-    @apply first:mb-5 sm:mb-0;
-  }
-  .content {
-    @apply flex flex-col justify-center;
-  }
-  img {
-    @apply rounded-xl;
   }
 }
 
