--- a/examples/starter-naked/src/styles/acfBlocks/cover-block.css
+++ b/examples/starter-naked/src/styles/acfBlocks/cover-block.css
@@ -1,21 +1,26 @@
 .cover-block {
   @apply relative;
 
-  .content {
+  .overlay {
     @apply absolute inset-0;
     @apply bg-[rgba(0,0,0,0.5)];
-    @apply flex items-center justify-center;
+    @apply flex flex-col items-center justify-center;
     @apply text-center;
 
     .headline {
-      @apply text-3xl uppercase;
+      @apply text-red-500 uppercase text-7xl;
+    }
+    .content-text p {
+      @apply text-white text-[40px];
     }
   }
   .image-container {
     @apply w-full h-[400px];
   }
-  .image {
-  }
+  /* .cover-image {
+
+  } */
+
   .button-container {
     @apply flex justify-center;
   }
