wordpress styles update and fixes

--- a/packages/gatsby-plugin-gwpt-packages/src/_custom.scss
+++ b/packages/gatsby-plugin-gwpt-packages/src/_custom.scss
@@ -23,10 +23,7 @@
   max-width: none;
   max-height: none;
 }
-.wp-block-image figure:nth-child(n) {
-  display: block;
-  max-width: 100%;
-}
+
 .wp-block-image.alignwide,
 .wp-block-image.alignfull {
   .gatsby-image-wrapper {
@@ -42,4 +39,15 @@
   clear: both;
   content: "";
   display: block;
+}
+
+.aligncenter .gatsby-image-wrapper,
+.aligncenter .inline-gatsby-image-wrapper {
+  margin: auto;
+}
+
+.wp-block-buttons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
