Menu style updated

--- a/examples/starter-ginger-tailwind/src/styles/tailwind.css
+++ b/examples/starter-ginger-tailwind/src/styles/tailwind.css
@@ -42,8 +42,14 @@
         @apply bg-gray-700 dark:bg-white dark:text-gray-800 rounded-full w-12 h-12 text-white flex 
         items-center justify-center text-2xl hover:bg-white hover:text-gray-800 dark:hover:bg-gray-700 dark:hover:text-white
     }
-    .specialLink{
-        @apply border-b flex py-2
+    .sidebar-menu li:not(.sub-menu){
+        @apply border-b flex border-gray-100 border-opacity-40
+    }
+    .sidebar-menu a{
+        @apply py-3 pl-2
+    }
+    .sub-menu li a{
+        @apply pl-8
     }
 
 }
