--- a/examples/starter-ginger-tailwind/src/styles/tailwind.css
+++ b/examples/starter-ginger-tailwind/src/styles/tailwind.css
@@ -51,7 +51,23 @@
     .sub-menu li a{
         @apply pl-8
     }
+    .blog-header h1{
+        @apply lg:text-5xl
+    }
 
+}
+#content{
+    @apply my-8 lg:my-12
+}
+.separateWithSlashes:not(:last-of-type):after {
+    content: "/";
+}
+.t-w{
+    width: calc(100% - 2rem);
+}
+.featured-wrapper .gatsby-image-wrapper {
+    width: 100%;
+    height: 100%;
 }
 .widget-title:after, .widget-title:before {
     content: "";
