--- a/examples/starter-naked/src/styles/acfBlocks/gallery-block.css
+++ b/examples/starter-naked/src/styles/acfBlocks/gallery-block.css
@@ -2,10 +2,12 @@
   @apply center-container;
   .gallery-items {
     @apply my-10;
-    @apply grid gap-10 sm:grid-cols-2 md:grid-cols-3;
+    > div {
+      @apply grid gap-10 sm:grid-cols-2 md:grid-cols-3;
 
-    .gallery-item {
-      @apply aspect-[5/4];
+      .gallery-item {
+        @apply aspect-[5/4];
+      }
     }
   }
 }
