--- a/examples/starter-agency/src/styles/tailwind.css
+++ b/examples/starter-agency/src/styles/tailwind.css
@@ -14,14 +14,14 @@
   .input-focus {
     @apply focus:outline-none focus:ring-gray-200 dark:focus:ring-opacity-25;
   }
-  input[type="search"]:-webkit-autofill {
+  /* input[type="search"]:-webkit-autofill {
     box-shadow: theme("colors.searchBg") 0px 0px 0px 1000px inset;
     -webkit-text-fill-color: theme("colors.text");
-  }
-  .dark input[type="search"]:-webkit-autofill {
+  } */
+  /* .dark input[type="search"]:-webkit-autofill {
     box-shadow: theme("colors.dark.searchBg") 0px 0px 0px 1000px inset;
     -webkit-text-fill-color: theme("colors.dark.text");
-  }
+  } */
 }
 
 @layer components {
@@ -30,10 +30,10 @@
   /* Menu */
   .menu-item,
   .menu-item > a {
-    @apply transition duration-300 text-headerColor dark:text-dark-headerColor text-upper-spaced;
+    @apply transition duration-300 text-headerColor dark:text-dark-headerColor;
   }
   .menu-item button {
-    @apply transition duration-500 hover:text-menuHoverColor dark:hover:text-dark-menuHoverColor text-upper-spaced;
+    @apply transition duration-500 hover:text-menuHoverColor dark:hover:text-dark-menuHoverColor;
   }
   .menu-item > a {
     @apply hover:text-menuHoverColor dark:hover:text-dark-menuHoverColor;
@@ -61,9 +61,9 @@
   .center-container {
     @apply px-5 mx-auto md:px-6 lg:px-10 w-[100%];
   }
-  .card {
+  /* .card {
     @apply rounded-lg shadow-lg bg-cardBg dark:bg-dark-cardBg;
-  }
+  } */
   .divider {
     @apply bg-text dark:bg-dark-text mx-auto h-[1px] w-[90%] opacity-25;
   }
