iage CDN ready acf builder

--- a/examples/starter-agency/src/styles/acfBlocks/projects-block.css
+++ b/examples/starter-agency/src/styles/acfBlocks/projects-block.css
@@ -5,7 +5,7 @@
     @apply grid px-[2px] gap-0.5 xl:grid-cols-3 lg:grid-cols-2;
     .project {
       @apply relative;
-      .project-image-container {
+      img {
         @apply aspect-1;
       }
       .overlay {
