--- a/examples/starter-agency/src/styles/base.css
+++ b/examples/starter-agency/src/styles/base.css
@@ -1,10 +1,10 @@
 @layer base {
   #___gatsby {
-    @apply text-lg text-text dark:text-dark-text bg-bg dark:bg-dark-bg font-body;
+    @apply text-lg text-text  dark:text-dark-text bg-bg dark:bg-dark-bg font-body;
   }
 
   a {
-    @apply transition duration-500;
+    @apply transition duration-500 hover:text-highlight;
   }
 
   h1 {
