--- a/examples/starter-agency/src/styles/acfBlocks/logos-block.css
+++ b/examples/starter-agency/src/styles/acfBlocks/logos-block.css
@@ -1,8 +1,8 @@
 .logos-block {
   @apply py-28;
-  &.dark-section {
+  /* &.dark-section {
     @apply bg-neutral-100;
-  }
+  } */
 
   .logos-container {
     @apply flex flex-wrap justify-center gap-5 center-container;
