--- a/examples/starter-agency/src/styles/acfBlocks/lasts-posts-block.css
+++ b/examples/starter-agency/src/styles/acfBlocks/lasts-posts-block.css
@@ -12,6 +12,9 @@
       @apply text-base tracking-wider uppercase transition duration-500 sm:mb-2 sm:text-lg hover:text-highlight;
     }
   }
+  .post-image-container {
+    @apply rounded-md aspect-[16/9];
+  }
 
   .post-image {
     @apply transition duration-1000 rounded-md shadow-sm hover:scale-110;
@@ -29,7 +32,7 @@
   .button-container {
     @apply flex justify-center;
     .button {
-      @apply mt-10 bg-black border-2 btn hover:bg-highlight;
+      @apply mt-10 bg-black btn hover:bg-highlight;
     }
   }
 }
