--- a/examples/starter-agency/src/styles/tailwind.css
+++ b/examples/starter-agency/src/styles/tailwind.css
@@ -65,7 +65,7 @@
   /* Components */
 
   .center-container {
-    @apply px-5 mx-auto md:px-6 lg:px-10 w-[100%];
+    @apply px-5  md:px-6 mx-auto lg:px-10  w-[100%];
   }
   /* .card {
     @apply rounded-lg shadow-lg bg-cardBg dark:bg-dark-cardBg;
