--- a/examples/starter-agency/src/styles/base.css
+++ b/examples/starter-agency/src/styles/base.css
@@ -1,6 +1,6 @@
 @layer base {
   #___gatsby {
-    @apply text-lg text-text  dark:text-dark-text bg-bg dark:bg-dark-bg font-body;
+    @apply text-lg text-text dark:text-dark-text bg-bg dark:bg-dark-bg font-body;
   }
 
   a {
@@ -29,6 +29,6 @@
     @apply mb-6;
   }
   blockquote {
-    @apply px-5 py-12 border-l-4 sm:px-12  max-w-[800px] mx-auto my-10 bg-teal-50 italic dark:bg-slate-800;
+    @apply px-5 py-10 border-l-4 sm:px-10  max-w-[800px] mx-auto my-10 bg-neutral-50 italic dark:bg-neutral-800;
   }
 }
