--- a/examples/starter-agency/src/styles/acfBlocks/cover-block.css
+++ b/examples/starter-agency/src/styles/acfBlocks/cover-block.css
@@ -1,4 +1,5 @@
-.cover-block {
+.cover-block,
+.project-hero {
   @apply relative;
 
   .overlay {
@@ -12,7 +13,8 @@
     .headline {
       @apply text-6xl text-light;
     }
-    .content-text p {
+    .content-text p,
+    .content-text {
       @apply text-light max-w-[600px];
     }
     .button-container {
