--- a/examples/starter-agency/src/styles/tailwind.css
+++ b/examples/starter-agency/src/styles/tailwind.css
@@ -10,6 +10,7 @@
 @import "acfBlocks/logos-block.css";
 @import "acfBlocks/lasts-posts-block.css";
 @import "acfBlocks/gallery-block.css";
+@import "acfBlocks/sections-block.css";
 
 @layer base {
   /* Menu */
