--- a/examples/starter-agency/src/styles/acfBlocks/gallery-block.css
+++ b/examples/starter-agency/src/styles/acfBlocks/gallery-block.css
@@ -1,5 +1,5 @@
 .gallery-block {
-  @apply py-28;
+  @apply py-16 md:py-28;
   @apply center-container;
   .gallery-item-container {
     @apply relative;
