--- a/examples/starter-agency/src/styles/acfBlocks/lasts-posts-block.css
+++ b/examples/starter-agency/src/styles/acfBlocks/lasts-posts-block.css
@@ -1,5 +1,5 @@
 .lasts-posts-block {
-  @apply py-28;
+  @apply py-16 md:py-28;
   .posts {
     @apply center-container;
     @apply grid gap-10 sm:grid-cols-2 xl:grid-cols-3;
