--- a/examples/starter-agency/src/styles/acfBlocks/spacer-block.css
+++ b/examples/starter-agency/src/styles/acfBlocks/spacer-block.css
@@ -1,6 +1,6 @@
 .spacer-block {
   @apply center-container;
-  @apply flex justify-center p-10;
+  @apply flex justify-center;
   .spacer {
     @apply w-1/3 h-[1px] bg-text;
   }
